  String arguments now accept "/" (they can actually do file names in directories
  Removed sleep(1) from autostartup file because it was annoying
  Made bedrock function try to get out of bedrock intelligently. Hopefully won't get stuck
  Raised maxTries to 200
  Fixed bug where refueling had unexpected behavior near maxFuelLimit
  New Parameters:
    -overfuel/fuelMultiplier [number]: This number is is what neededFuel is multiplied by when fuel is low.
    -version: This will display the current version number and end the program
    -file [fileName]: This will load a custom configuration file (basically a list of parameters). "##" starts comment lines. In the future "#" will start programs to run (but only through shell)
    -preciseTotals [t/f]: If true, turtle will write exactly what it mined to the logs. It may also transmit it over rednet.

--Version 3.6.2
  Allowed for 1.4.7 users to use rednet
  New Parameters:
    -legacyRednet [t/f]: Allows for 1.4.7 rednet

--Version 3.6.1
  New command: Refuel will do an emergency refuel by enderchest, quadrotor, or inventory (in that order)
  Add QuadCopter to available modes of refueling
  All boolean commands now only look for "n" or "f" to mark false, anything else is now true :)
  If turtle dies due to lack of fuel without a method of refueling, it will turn doRefuel on for when it is restarted. Also it reboots itself.
  New Parameters:
    -quad [t/f]: Allows a quadcopter to come and refuel the turtle. Doesn't work without rednet
    -quadTimeout [number]: The amount of time the turtle will wait for a quadcopter
  
--Version 3.6.0
  Added in command aliases, like "kill" and "quit" for "stop" and "unpause" and "pause" for "resume"
  Fixed bug where turtle would error with auto-restart if rename file already exists
  Accounts for left quarry in GPS location (untested)
  Modified dig, up, down, and detect functions