@@ -11,6 +11,7 @@
   Made bedrock function try to get out of bedrock intelligently. Hopefully won't get stuck
   Raised maxTries to 200
   Fixed bug where refueling had unexpected behavior near maxFuelLimit
+  Added more options if neededFuel is over fuel limit
   New Parameters:
     -overfuel/fuelMultiplier [number]: This number is is what neededFuel is multiplied by when fuel is low.
     -version: This will display the current version number and end the program
